fixed bug on mobile menu

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 
 .header__nav {
